--- a/index.html
+++ b/index.html
@@ -554,6 +554,6 @@ root.render(React.createElement(App));
   </script>
   <script>
     if('serviceWorker' in navigator){ window.addEventListener('load',()=>navigator.serviceWorker.register('./sw.js')); }
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
